--- a/packages/styles/tokens/colors.scss
+++ b/packages/styles/tokens/colors.scss
@@ -22,9 +22,9 @@ $colors: (
   hig-blue-10: rgba(230, 244, 251, 1),
   hig-blue-20: rgba(204, 234, 249, 1),
   hig-blue-30: rgba(155, 213, 239, 1),
-  hig-blue-40: rgba(102, 191, 233, 1),
-  hig-blue-50: rgba(6, 150, 215, 1),
-  hig-blue-60: rgba(6, 113, 161, 1),
+  hig-blue-40: #66bfe9,
+  hig-blue-50: #0696d7,
+  hig-blue-60: #0671a1,
   hig-blue-70: rgba(2, 75, 108, 1),
 
   // Secondary colors
